--- a/src/style/task-style.css
+++ b/src/style/task-style.css
@@ -1,6 +1,5 @@
-.task-manager{
- 
-}
+.task-manager {}
+
 .task-item {
     background: #fff;
     padding: 30px;
@@ -9,7 +8,17 @@
     left: 50%;
     top: 50%;
     text-align: center;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     border-radius: 40px;
     border: 1px solid #00000094;
+}
+
+.badge-priority {
+    height: 20px;
+    width: 20px;
+    background-color: red;
+    border-radius: 100%;
+    display: inline-flex;
+    margin-left: 10px;
+    border: 1px solid black;
 }
