comment task data

--- a/src/style/task-style.css
+++ b/src/style/task-style.css
@@ -32,3 +32,8 @@
 .task-detail .description {
     text-align: justify;
 }
+
+.select-priority {
+    flex-direction: row !important;
+    justify-content: space-between;
+}
